add scray-tests library

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -9,3 +9,7 @@ default = jaleelscrapper.settings
 [deploy]
 #url = http://localhost:6800/
 project = jaleelscrapper
+
+[test]
+# module that contains defined tests
+root = tests.scrapytests
